✨ Add open graph meta tags

--- a/index.html
+++ b/index.html
@@ -6,6 +6,25 @@
     <meta name="theme-color" content="#000000" />
     <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico" />
     <title>Repos</title>
+    <meta property="title" content="Repos" />
+    <meta
+      name="description"
+      content="A collection of repositories made by Gapit"
+    />
+    <meta property="og:title" content="Repos" />
+    <meta property="og:image" content="https://repos.gapit.io/repos-og.png" />
+    <meta
+      property="og:description"
+      content="A collection of repositories made by Gapit"
+    />
+    <meta property="og:url" content="repos.gapit.io" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@gapit_as" />
+    <meta name="twitter:title" content="Repos" />
+    <meta
+      name="twitter:image"
+      content="https://repos.gapit.io/icons/icon-512x512.png"
+    />
   </head>
   <body>
     <script>
